--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.1.3",
+    "@tanstack/react-query": "^5.64.0",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.1.5",
@@ -17,6 +18,10 @@
     "primereact": "^10.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^7.1.1"
+  },
+  "devDependencies": {
+    "@tanstack/query-devtools": "^5.62.16"
   }
 }
