--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "vitest"
   },
   "dependencies": {
     "@astrojs/react": "^4.1.3",
@@ -22,6 +23,8 @@
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
-    "@tanstack/query-devtools": "^5.62.16"
+    "@tanstack/query-devtools": "^5.62.16",
+    "@testing-library/react": "^16.1.0",
+    "vitest": "^2.1.8"
   }
 }
