--- a/backend/store/requirements.txt
+++ b/backend/store/requirements.txt
@@ -8,3 +8,5 @@ python-decouple == 3.8
 django-import-export == 3.3.6
 pillow == 11.1.0
 psycopg2 == 2.9.10
+django-redis == 5.4.0 
+hiredis == 3.1.0
