--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^4.1.3",
     "@tanstack/react-query": "^5.64.0",
+    "@tanstack/react-query-devtools": "^5.66.0",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.1.5",
