--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@astrojs/react": "^4.1.3",
@@ -20,12 +21,14 @@
     "primereact": "^10.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-paginate": "^8.2.0",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@tanstack/query-devtools": "^5.62.16",
-    "@testing-library/react": "^16.1.0",
-    "vitest": "^2.1.8"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "jsdom": "^26.0.0",
+    "vitest": "^2.1.9"
   }
 }
