--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-paginate": "^8.3.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "7.1.1"
   },
   "devDependencies": {
     "@tanstack/query-devtools": "^5.62.16",
